cluster/apps/kolmafia/deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: kolmafia
  labels:
    app: kolmafia

spec:
  replicas: 1
  selector:
    matchLabels:
      app: kolmafia
  template:
    metadata:
      labels:
        app: kolmafia
    spec:
      containers:
        - name: kolmafia
          image: ghcr.io/loathers/kolmafia-docker:latest
          ports:
            - name: web
              protocol: TCP
              containerPort: 3000
            - name: relay
              protocol: TCP
              containerPort: 60080
          volumeMounts:
            - name: kolmafia-data
              mountPath: /config/.kolmafia
      volumes:
        - name: kolmafia-data
          persistentVolumeClaim:
            claimName: pvc-kolmafia
