cluster/apps/kolmafia/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: kolmafia
  labels:
    app: kolmafia

spec:
  ports:
    - name: web
      protocol: TCP
      port: 3000
      targetPort: web
    - name: relay
      protocol: TCP
      port: 60080
      targetPort: relay
  selector:
    app: kolmafia
