cluster/apps/kolmafia/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kolmafia
  labels:
    app: kolmafia
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    traefik.ingress.kubernetes.io/router.middlewares: networking-oauth2-proxy-chain@kubernetescrd
    hajimari.io/enable: "true"
    hajimari.io/icon: "desktop-classic"


spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - kol.kblb.io
        - kol-relay.kblb.io
      secretName: my-certs-kolmafia
  rules:
    - host: kol.kblb.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kolmafia
                port:
                  name: web
    - host: kol-relay.kblb.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kolmafia
                port:
                  name: relay
